include_directories(${CMAKE_SOURCE_DIR}/include)

add_library(pomagma_macrostructure SHARED
	carrier.cpp
	base_bin_rel.cpp
	unary_relation.cpp
	binary_relation.cpp
	nullary_function.cpp
	injective_function.cpp
	binary_function.cpp
	symmetric_function.cpp
	sampler.cpp
	structure.cpp
	scheduler.cpp
	vm.cpp
	compact.cpp
	router.cpp
)

add_executable(macrostructure_carrier_test carrier_test.cpp)
target_link_libraries(macrostructure_carrier_test
	${POMAGMA_MACROSTRUCTURE_LIBS})
add_test(NAME macrostructure_carrier
	COMMAND macrostructure_carrier_test)

add_executable(macrostructure_unary_relation_test unary_relation_test.cpp)
target_link_libraries(macrostructure_unary_relation_test ${POMAGMA_MACROSTRUCTURE_LIBS})
add_test(NAME macrostructure_unary_relation
	COMMAND macrostructure_unary_relation_test)

add_executable(macrostructure_binary_relation_test binary_relation_test.cpp)
target_link_libraries(macrostructure_binary_relation_test ${POMAGMA_MACROSTRUCTURE_LIBS})
add_test(NAME macrostructure_binary_relation
	COMMAND macrostructure_binary_relation_test)

add_executable(macrostructure_nullary_function_test nullary_function_test.cpp)
target_link_libraries(macrostructure_nullary_function_test ${POMAGMA_MACROSTRUCTURE_LIBS})
add_test(NAME macrostructure_nullary_function
	COMMAND macrostructure_nullary_function_test)

add_executable(macrostructure_injective_function_test injective_function_test.cpp)
target_link_libraries(macrostructure_injective_function_test ${POMAGMA_MACROSTRUCTURE_LIBS})
add_test(NAME macrostructure_injective_function
	COMMAND macrostructure_injective_function_test)

add_executable(macrostructure_binary_function_test binary_function_test.cpp)
target_link_libraries(macrostructure_binary_function_test ${POMAGMA_MACROSTRUCTURE_LIBS})
add_test(NAME macrostructure_binary_function
       COMMAND macrostructure_binary_function_test)

add_executable(macrostructure_symmetric_function_test symmetric_function_test.cpp)
target_link_libraries(macrostructure_symmetric_function_test ${POMAGMA_MACROSTRUCTURE_LIBS})
add_test(NAME macrostructure_symmetric_function
	COMMAND macrostructure_symmetric_function_test)
